--- a/ejemplos/08-context/src/App.css
+++ b/ejemplos/08-context/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
+  background-color: white;
+  color: #292730;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App.dark {
+  background-color: #292730;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App header {
+  background-color: #e3e3e3;
+  box-shadow: 0px 0px 5px black;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App.dark header {
+  background-color: #767286;
+}
+
+.App header .user-section {
+  display: flex;
+}
+
+.App header .theme-selector {
+  cursor: pointer
+}
+
+.App main {
+  padding: 20px;
 }
